Fix Grid overflow css problem : Show settings button in case of smaller screens

--- a/style.css
+++ b/style.css
@@ -392,6 +392,7 @@ form.search-form input:focus {
 
 input[type="range"] {
   -webkit-appearance: none; 
+  appearance: none;
   width: 100%;
   height: 6px;
   background: #ddd;
